# egg-arena

./: Cargo.toml  config.toml
src/: egg_arena.rs  main.rs
src/egg_arena/: components.rs  constants.rs  entities.rs  helpers.rs  items.rs  plugins.rs  systems.rs  ui.rs
src/egg_arena/plugins/: dev_cam.rs
src/egg_arena/plugins/dev_cam/: systems.rs
src/egg_arena/plugins/dev_cam/systems/: flycam_transform_text.rs  runtime.rs
src/egg_arena/systems/: runtime.rs  setup.rs
src/egg_arena/systems/runtime/: button_system.rs  egg_count.rs  fly_cam_transform.rs  flycam_transform.rs  move_camera_to_egg_pick_position.rs  move_egg_to_faceoff_position.rs  rotation.rs  utils.rs
src/egg_arena/systems/setup/: background.rs  camera.rs  lights.rs  meshes.rs  set_initial_egg_count.rs  text.rs
src/egg_arena/systems/setup/meshes/: background.rs  egg.rs  table.rs
src/egg_arena/ui/: game_menu.rs  ui_camera.rs
src/egg_arena/ui/game_menu/: entire_screen_container.rs  game_title_image.rs  general_menu_button.rs  middle_elements_container.rs  players_number_mutation_button.rs  players_number_mutation_button_text.rs  players_number_picker_container.rs  players_number_picker_label.rs  players_number_text.rs
src/egg_arena/ui/game_menu/general_menu_button/: button_handlers.rs
