[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/TheRawMeatball/bevy.git", branch = "fix-hdr-asset-support", features = ["jpeg", "dynamic"]}
bevy_flycam = { git = "https://github.com/blipovac/bevy_flycam.git", branch = "master" }